2003-06-29 20:15  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSWorkspace.m (-launchApplication:showIcon:autolaunch:):
	Add a missing '@'.

2003-06-29 17:37  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSStringDrawing.m (-drawAtPoint:, -drawAtRect:, -size):
	Automatically turn off screen fonts in the layout manager if the
	ctm for the current context isn't the identity matrix (possibly
	flipped vertically).

2003-06-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/make_services.m: Alter format of filter info.
	* Tools/example.m: Added an example filter.
	* Tools/md5Digest.m: Example filter user.
	* Source/GSServicesManager.m: tweak for filters.
	* Source/NSPasteboard.m: more documentation

2003-06-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPasteboard.m: Documented all methods, fixed minor bugs
	writing fiels to pastebaords, implemented ([+typesFilterableTo:])
	wrote (partial implementation ...) the unimplemented filters stuff.
	* Source/GSServicesManager.m: helpers for filters.
	* Headers/AppKit/GSPasteboard.h: Removed unused methods, added
	documentation.

2003-06-26  Ludovic Marcotte <ludovic@Sophos.ca>

	* Fixed the transparency of Images/common_ret.tiff
	* Source/NSOutlineView (-setDataSource:) Modified to allow
	  a nil data source.

2003-06-26  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gnustep/gui/GSLayoutManager.h
	Changed ivars cached_pos and cached_cpos to unsigned.
	* Headers/gnustep/gui/GSLayoutManager_internal.h
	Changed element char_offset of structure glyph_t to unsigned.
	* Source/GSLayoutManager.m (_glyphDumpRuns,
	helpers::generateRunsToCharacter:,
	helpers::generateGlyphsUpToCharacter:,
	helpers::generateGlyphsUpToGlyph:,
	helpers::glyphForCharacter:index:positions::, getGlyphs:range:,
	characterRangeForGlyphRange:actualGlyphRange:,
	glyphRangeForCharacterRange:actualCharacterRange:,
	invalidateGlyphsForCharacterRange:changeInLength:actualCharacterRange:, 
	insertTextContainer:atIndex:):